# thoughtjack

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  conformance-baseline.yml  deny.toml  dist-workspace.toml  index.html  release-plz.toml  sitemap.xml
.github/workflows/: ci.yml  codeql.yml  docs.yml  e2e-nightly.yml  e2e-smoke.yml  release-plz.yml  release.yml  scorecard.yml  security.yml
assets/css/: styles.03a013e1.css  styles.f4c69242.css
assets/js/: 0058b4c6.432f3dbe.js  0058b4c6.4f85452c.js  0058b4c6.a2878b14.js  0058b4c6.ae581381.js  0058b4c6.b24b8cf7.js  0058b4c6.d539d2a9.js  04e9f62a.ab4ae1c9.js  0525c5cf.eefdba75.js  0972d51c.0ed24f46.js  0972d51c.5a3b5f8a.js  0972d51c.9627661e.js  1000.783bbfb7.js  10eb9664.9639b088.js  10eb9664.ca4d79a5.js  113cef04.077a82ce.js  1169.145026ef.js  1203.f705313f.js  12752a4c.0c5ad8c4.js  12752a4c.f078c0a1.js  165.7a919bd9.js  16664280.4db5fe24.js  16664280.74917f1c.js  16664280.e4abc6d5.js  1741.ea0aa98c.js  1746.6a3eda57.js  17896441.27ce977b.js  17896441.8663fb7f.js  19936171.1844c84a.js  19dcfa04.4287826f.js  19dcfa04.975ac786.js  1ab15d7d.b1a83d4c.js  1ab15d7d.cfc59c5f.js  1df93b7f.4106c2b2.js  1f04cf92.8d804c14.js  (+283 more)
docs/: SECURITY.md
docs-site/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_a2a_sse_parser.rs  fuzz_agui_sse_parser.rs  fuzz_config_loader.rs  fuzz_jsonrpc_parser.rs  fuzz_mcp_handler.rs  fuzz_mcp_response_dispatch.rs  fuzz_nested_json_generator.rs  fuzz_oatf_loader.rs  fuzz_phase_trigger.rs  fuzz_synthesize_validation.rs  fuzz_uri_template.rs
fuzz/scripts/: update_corpus.sh
scenarios/: adaptive-injection.yaml  bait-and-switch.yaml  batch-amplification.yaml  context-persistence.yaml  credential-harvester.yaml  credential-phishing.yaml  escalation-ladder.yaml  multi-vector-attack.yaml  nested-json-dos.yaml  notification-flood.yaml  pipe-deadlock.yaml  prompt-injection.yaml  registry.yaml  resource-exfiltration.yaml  resource-rug-pull.yaml  rug-pull.yaml  slow-loris.yaml  zombie-process.yaml
specs/: ARCHITECTURE.md  TJ-SPEC-001_Configuration_Schema.md  TJ-SPEC-001_Configuration_Schema[Superceded].md  TJ-SPEC-002_Transport_Abstraction.md  TJ-SPEC-003_Phase_Engine.md  TJ-SPEC-003_Phase_Engine[Superceded].md  TJ-SPEC-004_Behavioral_Modes.md  TJ-SPEC-004_Behavioral_Modes[Superceded].md  TJ-SPEC-005_Payload_Generation.md  TJ-SPEC-005_Payload_Generation[Superceded].md  TJ-SPEC-006_Configuration_Loader.md  TJ-SPEC-006_Configuration_Loader[Superceded].md  TJ-SPEC-007_CLI_Interface.md  TJ-SPEC-008_Observability.md  TJ-SPEC-009_Dynamic_Responses.md  TJ-SPEC-009_Dynamic_Responses[Superceded].md  TJ-SPEC-010_Builtin_Scenarios.md  TJ-SPEC-010_Record_Replay.md  TJ-SPEC-011_Documentation_Site.md  TJ-SPEC-012_Indicator_Schema[Superceded].md  TJ-SPEC-013_OATF_Integration.md  TJ-SPEC-014_Verdict_Evaluation_Output.md  TJ-SPEC-015_Multi_Actor_Orchestration.md  TJ-SPEC-016_AGUI_Protocol_Support.md  TJ-SPEC-017_A2A_Protocol_Support.md  TJ-SPEC-018_MCP_Client_Mode.md  TJ-SPEC-021_Test_Orchestration.md  TJ-SPEC-022_Context_Mode.md
src/: capture.rs  error.rs  lib.rs  main.rs  server.rs
tests/: integration_tests.rs  test_cli_e2e.rs  test_config_directives.rs  test_config_validation.rs  test_delivery_behaviors.rs  test_dynamic_responses.rs  test_generators_extended.rs  test_http_transport.rs  test_phase_content.rs  test_rug_pull.rs  test_scenario_compound.rs  test_scenario_dos.rs  test_scenario_injection.rs  test_scenario_protocol.rs  test_scenario_resource.rs  test_scenario_temporal.rs  test_server_resilience.rs  test_side_effects.rs  test_side_effects_extended.rs  test_slow_loris.rs
tests/e2e/reference-agents/crewai/: agent.py  pyproject.toml  server.py
tests/e2e/reference-agents/langgraph/: agent.py  pyproject.toml  server.py
thoughtjack/: CHANGELOG.md  Cargo.toml
thoughtjack-core/: CHANGELOG.md  Cargo.toml
thoughtjack-core/src/: error.rs  lib.rs
thoughtjack-core/src/config/: mod.rs  schema.rs
thoughtjack-docs/: Cargo.toml
thoughtjack-docs/src/: lib.rs  registry.rs  sidebar.rs  validate.rs
thoughtjack-docs/src/coverage/: mcp_surface.rs  mitre.rs  mod.rs  owasp_mcp.rs
thoughtjack-docs/src/mdx/: frontmatter.rs  mod.rs  page.rs  prose.rs
thoughtjack-docs/src/mermaid/: escape.rs  flowchart.rs  mod.rs  sequence.rs  state.rs
thoughtjack/scenarios/: credential-phishing.yaml  nested-json-dos.yaml  notification-flood.yaml  prompt-injection.yaml  registry.yaml  resource-exfiltration.yaml  resource-rug-pull.yaml  response-sequence.yaml  rug-pull.yaml  slow-loris.yaml  unicode-obfuscation.yaml
thoughtjack/src/: capture.rs  error.rs  lib.rs  main.rs  server.rs
thoughtjack/src/behavior/: delivery.rs  mod.rs  side_effects.rs
thoughtjack/src/cli/: args.rs  mod.rs
thoughtjack/src/cli/commands/: agent.rs  completions.rs  diagram.rs  docs.rs  mod.rs  server.rs  version.rs
thoughtjack/src/config/: loader.rs  mod.rs  schema.rs  validation.rs
thoughtjack/src/dynamic/: context.rs  functions.rs  matching.rs  mod.rs  sequence.rs  template.rs
thoughtjack/src/dynamic/handlers/: command.rs  http.rs  mod.rs
thoughtjack/src/generator/: ansi_escape.rs  batch_notifications.rs  garbage.rs  mod.rs  nested_json.rs  repeated_keys.rs  unicode_spam.rs
thoughtjack/src/handlers/: initialize.rs  mod.rs  prompts.rs  resources.rs  tools.rs
thoughtjack/src/observability/: events.rs  logging.rs  metrics.rs  mod.rs
thoughtjack/src/phase/: effective.rs  engine.rs  mod.rs  state.rs  trigger.rs
thoughtjack/src/scenarios/: mod.rs
thoughtjack/src/transport/: http.rs  jsonrpc.rs  mod.rs  stdio.rs
thoughtjack/tests/: test_capture.rs  test_cli_commands.rs  test_generator_e2e.rs  test_http_transport.rs  test_observability.rs  test_resources_prompts.rs  test_simple_tool_call.rs  test_timed_phase.rs
thoughtjack/tests/common/: mod.rs
thoughtjack/tests/fixtures/: conformance.yaml  simple_server.yaml  timed_phase.yaml  with_env.yaml  with_include.yaml
(+385 files in other folders)
