[workspace]
members = ["thoughtjack", "thoughtjack-core", "thoughtjack-docs"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/thoughtgate/thoughtjack"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
regex = "1.12"
indexmap = { version = "2.13", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.11"
glob = "0.3"
thoughtjack-core = { path = "thoughtjack-core", version = "0.3.0", default-features = false }
thoughtjack-docs = { path = "thoughtjack-docs", version = "0.3.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
