[workspace]
members = ["."]
exclude = ["fuzz"]

[package]
name = "thoughtjack"
version = "0.6.1"
edition = "2024"
rust-version = "1.88"
description = "Adversarial agent security testing tool"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/thoughtgate/thoughtjack"
homepage = "https://github.com/thoughtgate/thoughtjack"
publish = true
keywords = ["mcp", "security", "testing", "adversarial", "a2a"]
categories = ["development-tools::testing"]

[features]
default = []

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2.0"
async-trait = "0.1"
dashmap = "6.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
tokio-util = { version = "0.7", features = ["codec"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
bytes = "1.11"
tokio-stream = { version = "0.1", features = ["sync"] }
strsim = "0.11"
humantime = "2"
oatf = { version = "0.4", features = ["cel-eval"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
shlex = "1.3"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono"] }
oatf = "0.4"

[dev-dependencies]
indexmap = "2"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tempfile = "3.24"
proptest = "1.10"

[[bin]]
name = "thoughtjack"
path = "src/main.rs"

[lib]
name = "thoughtjack"
path = "src/lib.rs"

[package.metadata.dist]
dist = true

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
