[package]
name = "thoughtjack-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
thoughtjack = { path = ".." }
serde_json = "1.0"

# Prevent this workspace from publishing
[package.metadata.dist]
dist = false

[[bin]]
name = "fuzz_jsonrpc_parser"
path = "fuzz_targets/fuzz_jsonrpc_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_oatf_loader"
path = "fuzz_targets/fuzz_oatf_loader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mcp_handler"
path = "fuzz_targets/fuzz_mcp_handler.rs"
test = false
doc = false

[[bin]]
name = "fuzz_synthesize_validation"
path = "fuzz_targets/fuzz_synthesize_validation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_uri_template"
path = "fuzz_targets/fuzz_uri_template.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mcp_response_dispatch"
path = "fuzz_targets/fuzz_mcp_response_dispatch.rs"
test = false
doc = false

[[bin]]
name = "fuzz_a2a_sse_parser"
path = "fuzz_targets/fuzz_a2a_sse_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_agui_sse_parser"
path = "fuzz_targets/fuzz_agui_sse_parser.rs"
test = false
doc = false
