[package]
name = "thoughtjack-docs"
version.workspace = true
description = "Documentation generation for ThoughtJack attack scenarios"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thoughtjack-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
