[package]
name = "thoughtjack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Adversarial MCP server for security testing"
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage = "https://github.com/thoughtgate/thoughtjack"
keywords = ["mcp", "security", "testing", "adversarial"]
categories = ["development-tools::testing"]

[dependencies]
thoughtjack-core = { workspace = true, features = ["clap"] }
thoughtjack-docs = { workspace = true }
tokio = { version = "1.49", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = { workspace = true }
async-trait = "0.1"
dashmap = "6.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
base64 = "0.22"
rand = "0.9"
regex = { workspace = true }
indexmap = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
chrono = { workspace = true }
axum = "0.8"
bytes = "1.11"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
glob = { workspace = true }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
strsim = { workspace = true }

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tempfile = "3.24"

[features]
default = []

[[bin]]
name = "thoughtjack"
path = "src/main.rs"

[lib]
name = "thoughtjack"
path = "src/lib.rs"

[lints]
workspace = true
