[project]
name = "thoughtjack-e2e-crewai"
version = "0.1.0"
description = "CrewAI reference agent for ThoughtJack e2e conformance tests"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.80",
    "crewai-tools[mcp]>=0.40",
    "uvicorn~=0.34",
    "fastapi~=0.115",
]

[tool.setuptools]
py-modules = ["agent", "server"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
