[project]
name = "thoughtjack-e2e-langgraph"
version = "0.1.0"
description = "LangGraph reference agent for ThoughtJack e2e conformance tests"
requires-python = ">=3.11"
dependencies = [
    "langgraph~=0.4",
    "langchain-openai~=0.3",
    "langchain-mcp-adapters>=0.1,<0.2",
    "uvicorn~=0.34",
    "fastapi~=0.115",
]

[tool.setuptools]
py-modules = ["agent", "server"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
